# motions

./: CMakeLists.txt  README.md  package.xml
include/motions/: motions.h  motions_kuka.h  paramProj.h  raster.h  spiral.h
launch/: cab_generic.launch  cab_go_home.launch  cab_initial_pos.launch  cab_move_back.launch  cab_raster_wiping.launch  cab_spiral_wiping.launch  kuka_generic.launch  kuka_joint_vel.launch  kuka_move_back.launch  kuka_ref.launch  kuka_spiral_wiping.launch  kuka_start.launch
src/: motions.cpp  motions_kuka.cpp  paramProj.cpp  raster.cpp  raster_old.cpp  spiral.cpp
