<?xml version="1.0"?>
<package format="2">
  <name>motions</name>
  <version>0.0.0</version>
  <description>
	Library with motion primitives inclide forward and inverse kinematics for testing robots.
	Primitives also include sweeping motion with contact using force sensing.
	Classes to compute parametric 2D motions and to project 3D points and vectors onto the planes of the parametric motions
  </description>

  <maintainer email="Joao.Moura@ed.ac.uk">Joao</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>serial_arm_lib</depend>
  <depend>hardware</depend>
  <depend>kdl_parser</depend>
</package>
